updates github, about-me text, readme file

--- a/index.html
+++ b/index.html
@@ -64,15 +64,13 @@
                 <img src="./images/portfolio_image_colors2.jpg" class="float-left" />
                 <h2>Projects</h2>
                 <p>
-                    As a project manager and business analyst and previous developer I have an extensive project history
-                    which includes mutltiple
-                    industries for both domestic and international clients. The web development projects include B2B,
-                    B2C, and internal corporate websites.
+                    As a Technical Consultant, who has provided Project Manager, Product Owner, Scrum Master, Business Analyst, Test Management/Execution
+                    and previous Developer services I have an extensive project history.  The projects include Frtune 500 and Fortune 1000 corporate
+                    clients in mutltiple industries both domestic and international. The web development projects include B2B, B2C, and internal corporate
+                    websites.
 
-                    As a new student for website development I have a limited number of recent projects to display
-                    currently, due to my current
-                    student status. I look forward to displaying more sophisticated project work as I advance through my
-                    coursework.
+                    As a new Full-stack Web Development student I have a limited number of recent projects to display currently, due to my current
+                    student status. I look forward to displaying more sophisticated project work as I advance through my coursework.
 
             </section>
 
@@ -81,11 +79,14 @@
                 <a target=_blank href="https://sclo00ps.github.io/mini-project_050521/">
                     <div class="box-1">Fashion Saturation </div>
                 </a>
-                <a target=_blank href="https://go-yasi.github.io/perfect-night-in/"></a>> <div class="box-2">Perfect-Night-In
-                    Project</div></a>
+                <a target=_blank href="https://go-yasi.github.io/perfect-night-in/">   
+                     <div class="box-2">Perfect-Night-In</div>
+                </a>
+
                 <a>
                     <div class="box-3">Placeholder Project</div>
                 </a>
+
                 <a>
                     <div class="box-4">Placeholder Project</div>
                 </a>
@@ -97,8 +98,9 @@
                 <img src="./images/contacts_five.jpg" class="float-left" />
                 <h2>Contact Me</h2>
                 <p>
-                    Email: 96lkyent.com <br>
-                    Linked-in: linked-in/lougine_scott <br>
+                    Email:      96lkyent.com <br>
+                    Linked-in:  linked-in/lougine_scott <br>
+                    Github:     https://github.com/sclo00ps <br>
                 </p>
             </section>
 
