update text and media query

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 
             <!-- resume defined with photos and text -->
             <section id="resume" class="resume">
-                <a target=_blank download href="./cv/lougine_scott_cv2.pdf"><img src="./images/cv_one.JPG"
+                <a target=_blank download href="./cv/lougine_scott_cv3.pdf"><img src="./images/cv_one.JPG"
                         class="float-left" /></a>
                 <h2>Resume</h2>
                 <p>
-                    I am a Technical Consultant that has provided multiple services to both domestic and international
-                    clients. I have provided development, project management, business analysis, testing and
-                    validation services in multiple industries.
+                    As a Technical Consultant that has provided multiple services to both domestic and international
+                    clients on short-term and long-term contracts based upon the client's business needs. I have provided
+                    development, project management, business analysis, testing and validation services in multiple industries.
 
                     I have made the decision to return to my first love, software development to contribute during
                     these amazing times of technological advancement and creativity which is taking place globally.
