project link update

--- a/index.html
+++ b/index.html
@@ -74,17 +74,18 @@
                 </p>
             </section>
 
-            <!--insert project boxes on inside project container-->
+            <!--insert project boxes inside project container and link to projects-->
             <div class="container-2">
                 <a target=_blank href="https://sclo00ps.github.io/mini-project_050521/">
                     <div class="box-1">Fashion Saturation </div>
                 </a>
-                <a target=_blank href="https://go-yasi.github.io/perfect-night-in/">   
+                <a target=_blank href="https://go-yasi.github.io/perfect-night-in/"> 
                      <div class="box-2">Perfect-Night-In</div>
                 </a>
 
                 <a>
-                    <div class="box-3">Placeholder Project</div>
+                 <a target=_blank href="https://upper-beaver-88035.herokuapp.com/">   
+                    <div class="box-3">Givehub</div>
                 </a>
 
                 <a>
@@ -99,9 +100,13 @@
                 <h2>Contact Me</h2>
                 <p>
                     Email:      96lkyent.com <br>
-                    Linked-in:  linked-in/lougine_scott <br>
+                    Linked-in:  linkedin/lougine_scott <br>
                     Github:     https://github.com/sclo00ps <br>
                 </p>
+
+
+
+
             </section>
 
             <!-- resume defined with photos and text -->
