--- a/index.html
+++ b/index.html
@@ -104,19 +104,16 @@
                     Github:     https://github.com/sclo00ps <br>
                 </p>
 
-
-
-
             </section>
 
             <!-- resume defined with photos and text -->
             <section id="resume" class="resume">
-                <a target=_blank download href="./cv/lougine_scott_cv3.pdf"><img src="./images/cv_one.JPG"
+                <a target=_blank download href="./cv/lougine_scott_cv4.pdf"><img src="./images/cv_one.JPG"
                         class="float-left" /></a>
                 <h2>Resume</h2>
                 <p>
                     As a Technical Consultant that has provided multiple services to both domestic and international
-                    clients on short-term and long-term contracts based upon the client's business needs. I have provided
+                    clients on short-term and long-term contracts based the client's business needs. I have provided
                     development, project management, business analysis, testing and validation services in multiple industries.
 
                     I have made the decision to return to my first love, software development to contribute during
