resume and project text updates, and project addition

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- 1. The site primary heading defined
            2. navigation bar links defined in heading-->
 
-        <h1>Lougine Scott</h1>
+        <h1><span></span>Lougine Scott</span></h1>
 
         <nav>
             <ul>
@@ -64,13 +64,14 @@
                 <img src="./images/portfolio_image_colors2.jpg" class="float-left" />
                 <h2>Projects</h2>
                 <p>
-                    As a Technical Consultant, who has provided Project Manager, Product Owner, Scrum Master, Business Analyst, Test Management/Execution
-                    and previous Developer services I have an extensive project history.  The projects include Frtune 500 and Fortune 1000 corporate
-                    clients in mutltiple industries both domestic and international. The web development projects include B2B, B2C, and internal corporate
-                    websites.
+                    As a Technical Consultant that has provided multiple services to both domestic and international clients
+                    on short-term and long-term contracts based the client's business needs, creating an extensive project history.
+                    The projects include Fortune 500 and Fortune 1000 corporate clients in several industries both domestic and 
+                    international. The web development projects include B2B, B2C, and internal corporate
+                    websites.  
 
-                    As a new Full-stack Web Development student I have a limited number of recent projects to display currently, due to my current
-                    student status. I look forward to displaying more sophisticated project work as I advance through my coursework.
+                    As a Full-stack Web Development student I have a limited number of recent projects to display currently. I look forward to 
+                    displaying more sophisticated project work as I advance through my coursework.  
                 </p>
             </section>
 
@@ -112,12 +113,19 @@
                         class="float-left" /></a>
                 <h2>Resume</h2>
                 <p>
-                    As a Technical Consultant that has provided multiple services to both domestic and international
-                    clients on short-term and long-term contracts based the client's business needs. I have provided
-                    development, project management, business analysis, testing and validation services in multiple industries.
+                    An Information Technology Consultant who has provided Project Manager, Product Owner, Scrum Master, 
+                    Business Analyst, Test Management/Execution, and previous Developer services.  Consulting services have
+                    been provided to Fortune 500 and Fortune 1000 corporate clients both domestic and international in several
+                    industries. Projects have included legacy system application and platform conversions, CSV validation, 
+                    digital transformation, process re-engineering, infrastructure, disasater recovery, systems security, 
+                    mobile, web development, UX/UI design, data conversion/migration/validation, and testing (manual/automated).  
 
-                    I have made the decision to return to my first love, software development to contribute during
-                    these amazing times of technological advancement and creativity which is taking place globally.
+                    A desire to return to my inital passion of software development which is where my career in Information
+                    Technology began is the catalyst for studying to obtain these new skills. The ability to make a direct 
+                    contribution creating during these amazing times of technological advancements and global growth
+                    is exciting.  Collaborating with others to creatively meet the needs of modern society is like no other period
+                    in history. I look forward to integrating these Full Stack Web Development skills with my existing expertise
+                    and continuously learning so much more in an amazing opportunity.  
                 </p>
             </section>
 
