project box label color change, text update

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     international. The web development projects include B2B, B2C, and internal corporate
                     websites.  
 
-                    As a Full-stack Web Development student I have a limited number of recent projects to display currently. I look forward to 
-                    displaying more sophisticated project work as I advance through my coursework.  
+                    As a Full-stack Web Development student I have a limited number of recent projects to display currently. I look
+                    forward to displaying more sophisticated project work as I advance through my coursework.  
                 </p>
             </section>
 
@@ -115,10 +115,11 @@
                 <p>
                     An Information Technology Consultant who has provided Project Manager, Product Owner, Scrum Master, 
                     Business Analyst, Test Management/Execution, and previous Developer services.  Consulting services have
-                    been provided to Fortune 500 and Fortune 1000 corporate clients both domestic and international in several
-                    industries. Projects have included legacy system application and platform conversions, CSV validation, 
-                    digital transformation, process re-engineering, infrastructure, disasater recovery, systems security, 
-                    mobile, web development, UX/UI design, data conversion/migration/validation, and testing (manual/automated).  
+                    been provided to Fortune 500 and Fortune 1000 corporate clients both domestic and international locations
+                    in several industries. Projects have included legacy system application and platform conversions, CSV 
+                    validation, digital transformation, process re-engineering, infrastructure, disasater recovery, systems 
+                    security, mobile, web development, UX/UI design, data conversion/migration/validation, and testing
+                    (manual/automated).  
 
                     A desire to return to my inital passion of software development which is where my career in Information
                     Technology began is the catalyst for studying to obtain these new skills. The ability to make a direct 
