--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             <section id="projects" class="projects">
                 <img src="./images/portfolio_image_colors2.jpg" class="float-left" />
                 <h2>Projects</h2>
-                <p>
-                    As a Technical Consultant that has provided multiple services to both domestic and international clients
-                    on short-term and long-term contracts based the client's business needs, creating an extensive project history.
-                    The projects include Fortune 500 and Fortune 1000 corporate clients in several industries both domestic and 
-                    international. The web development projects include B2B, B2C, and internal corporate
-                    websites.  
-
-                    As a Full-stack Web Development student I have a limited number of recent projects to display currently. I look
-                    forward to displaying more sophisticated project work as I advance through my coursework.  
+                <p>              
+                    Projects are the culmination of vision, ideas, concepts and the ability to bring them all to life. 
+                    Participating in many projects, taking on tasks in and out your area of expertise provides an 
+                    excellent foundation to increase knowledge and abilities exponentially and rapidly.                     
+                                       
+                    Being a Consultant working on many projects which also include web development projects such as 
+                    B2B, B2C, and internal corporate websites has been an enormous benefit.  As a Full-stack Web
+                    Development student I have a limited number of recent projects to display currently. I look forward
+                    to displaying more sophisticated project work as I advance through my coursework.  
                 </p>
             </section>
 
