Project section text updates

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     excellent foundation to increase knowledge and abilities exponentially and rapidly.                     
                                        
                     Being a Consultant working on many projects which also include web development projects such as 
-                    B2B, B2C, and internal corporate websites has been an enormous benefit.  As a Full-stack Web
+                    B2B, B2C, and internal corporate websites has been an enormous benefit.  As a Full Stack Web
                     Development student I have a limited number of recent projects to display currently. I look forward
                     to displaying more sophisticated project work as I advance through my coursework.  
                 </p>
