font size in sections changed from 18 to 14

--- a/index.html
+++ b/index.html
@@ -121,12 +121,11 @@
                     security, mobile, web development, UX/UI design, data conversion/migration/validation, and testing
                     (manual/automated).  
 
-                    A desire to return to my inital passion of software development which is where my career in Information
-                    Technology began is the catalyst for studying to obtain these new skills. The ability to make a direct 
-                    contribution creating during these amazing times of technological advancements and global growth
-                    is exciting.  Collaborating with others to creatively meet the needs of modern society is like no other period
-                    in history. I look forward to integrating these Full Stack Web Development skills with my existing expertise
-                    and continuously learning so much more in an amazing opportunity.  
+                    A desire to return to my inital passion of software development which is where my career  began is the 
+                    catalyst for studying to obtain these new skills. The ability to collaborate and make a contribution 
+                    creating during these amazing times of technological advancements and global growth is exciting.  I look
+                    forward to integrating these Full Stack Web Development skills with my existing expertise and continuously
+                    learning so much more in an amazing opportunity.  
                 </p>
             </section>
 
