--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h2>Contact Me</h2>
                 <p>
                     Email:      96lkyent.com <br>
-                    Linked-in:  linkedin/lougine_scott <br>
+                    Linked-in:  https://www.linkedin.com/in/lougine-scott-99b2193a<br>
                     Github:     https://github.com/sclo00ps <br>
                 </p>
 
