correct links email, linkedin, github

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                 <img src="./images/contacts_five.jpg" class="float-left" />
                 <h2>Contact Me</h2>
                 <p>
-                    Email:      96lkyent.com <br>
-                    Linked-in:  https://www.linkedin.com/in/lougine-scott-99b2193a<br>
-                    Github:     https://github.com/sclo00ps <br>
+                    Email:      <a href = "mailto: 96lkyent@gmail.com">96lkyent@gmail.com</a> <br>
+                    Linkedin:   <a target=_blank href="https://www.linkedin.com/in/lougine-scott-99b2193a">LinkedIn_LougineScott</a><br>  
+                    Github:     <a target= blank href="https://github.com/sclo00ps">Github</a><br>
                 </p>
 
             </section>
