--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                     Business Analyst, Test Management/Execution, and previous Developer services.  Consulting services have
                     been provided to Fortune 500 and Fortune 1000 corporate clients both domestic and international locations
                     in several industries. Projects have included legacy system application and platform conversions, CSV 
-                    validation, digital transformation, process re-engineering, infrastructure, disasater recovery, systems 
+                    validation, digital transformation, process re-engineering, infrastructure, disaster recovery, systems 
                     security, mobile, web development, UX/UI design, data conversion/migration/validation, and testing
                     (manual/automated).  
 
-                    A desire to return to my inital passion of software development which is where my career  began is the 
+                    A desire to return to my initial passion of software development which is where my career  began is the 
                     catalyst for studying to obtain these new skills. The ability to collaborate and make a contribution 
                     creating during these amazing times of technological advancements and global growth is exciting.  I look
                     forward to integrating these Full Stack Web Development skills with my existing expertise and continuously
